[project]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = "homework-08/fastAPI"
authors = [
    {name = "Sergey Kravchenko"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

